hush the linter

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -60,4 +60,7 @@ about:
 extra:
   recipe-maintainers:
     - boldorider4
+  skip-lints:
+    - invalid_url
+    - host_section_needs_exact_pinnings
 
